feat: update profile info